<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            >

            <ImageView


                android:layout_width="200dp"

                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/applogo" />


            <LinearLayout
                android:id="@+id/llayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"

                android:orientation="vertical"


                android:padding="20dp">







                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black"
                    >


                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="fill_parent"
                        android:layout_height="51dip"
                        android:fontFamily="Roboto"
                        android:hint="@string/NameView"
                        android:inputType="textEmailAddress"
                        android:minEms="0"
                        android:ems="10"
                        android:minWidth="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        />

                </android.support.design.widget.TextInputLayout>





                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black"
                    >


                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="fill_parent"
                        android:layout_height="51dip"
                        android:fontFamily="Roboto"
                        android:hint="@string/usernameView"
                        android:inputType="textEmailAddress"
                        android:minEms="0"
                        android:ems="10"
                        android:minWidth="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        />

                </android.support.design.widget.TextInputLayout>














                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    >



                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="fill_parent"
                        android:layout_height="51dip"


                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:fontFamily="Roboto"
                        android:hint="@string/passwordView"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:password="true"
                        android:singleLine="true"
                        />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    >



                    <EditText
                        android:id="@+id/edit_cofirm_password"
                        android:layout_width="fill_parent"
                        android:layout_height="51dip"


                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:fontFamily="Roboto"
                        android:hint="@string/confirmpasswordView"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:password="true"
                        android:singleLine="true"
                        />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbShowPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  android:layout_gravity="end"
                    android:textSize="14dp"
                    android:buttonTint="@color/black"
                    android:text="@string/show_password"
                    android:textColor="@color/black" />

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black"
                    >


                    <EditText
                        android:id="@+id/editMobile_No"

                        android:layout_width="fill_parent"
                        android:layout_height="51dip"
                        android:fontFamily="Roboto"
                        android:hint="@string/mobileView"
                        android:inputType="number"
                        android:minEms="0"
                        android:ems="10"
                        android:minWidth="0dp"

                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black"
                    >


                    <EditText
                        android:id="@+id/editEmailId"

                        android:layout_width="fill_parent"
                        android:layout_height="51dip"
                        android:fontFamily="Roboto"
                        android:hint="@string/emailView"
                        android:inputType="textEmailAddress"
                        android:minEms="0"
                        android:ems="10"
                        android:minWidth="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/model_button"
                    android:text="@string/SignUp"
                    android:textAllCaps="false"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />









            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>