<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
           >

            <ImageView


                android:layout_width="200dp"

                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/applogo" />


            <LinearLayout
                android:id="@+id/llayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"

                android:orientation="vertical"


                android:padding="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black">


                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="fill_parent"
                        android:layout_height="51dip"
                        android:ems="10"
                        android:fontFamily="Roboto"
                        android:hint="@string/hint_username"
                        android:inputType="textEmailAddress"
                        android:minEms="0"
                        android:minWidth="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColorHint="@color/black">


                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="fill_parent"
                        android:layout_height="51dip"


                        android:ems="10"
                        android:fontFamily="Roboto"
                        android:hint="@string/hint_password"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:password="true"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="8dp"
                        android:text="Forgot Password"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:visibility="gone" />


                    <CheckBox
                        android:id="@+id/cbShowPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:buttonTint="@color/black"
                        android:text="@string/show_password"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </RelativeLayout>
                >

                <Button
                    android:id="@+id/btn_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/model_button"
                    android:text="@string/btn_enter"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <LinearLayout
                    android:id="@+id/createaacount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/Register"
                        android:textColor="@color/black"

                        android:textSize="15dp" />
                </LinearLayout>
                >


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_copywrite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:gravity="center_horizontal"
                        android:text="@string/company_name"
                        android:textColor="@color/black"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>