<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CabTabFragment.Post_Adv">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"


        >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grayish"
        app:popupTheme="@style/AppTheme.PopupOverlay">


        <LinearLayout
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="?attr/actionBarSize"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/back">
            </ImageView>
        </LinearLayout>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:text="@string/Postads"


            android:textStyle="bold"
            android:textSize="18dp" />




    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"


        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"

            android:layout_marginRight="10dp"
            android:background="@color/grayishtra"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">


                <EditText
                    android:id="@+id/name_your_ads"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"

                    android:hint="@string/NameYourAdvertise"
                    android:inputType="textEmailAddress"

                    android:minWidth="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"

                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14dp" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="Select Days"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />


            <Spinner
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="Select Date"
                android:textColor="@color/black"

                android:textSize="14sp" />

            <TextView
                android:id="@+id/StartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/calender"
                android:drawablePadding="5dp"
                android:text="Start Date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">


                <EditText
                    android:id="@+id/total_Amount"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/EnterAmount"

                    android:inputType="textEmailAddress"
                    android:minWidth="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14dp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">


                <EditText
                    android:id="@+id/total_no_of_view"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:enabled="false"
                    android:fontFamily="Roboto"
                    android:hint="@string/TotalNumberofViews"
                    android:inputType="textEmailAddress"

                    android:minWidth="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="Your Haven't Subscribe To Our  Membership Account"
                android:textColor="@color/black"

                android:textSize="14sp" />

                <Button
                    android:id="@+id/subscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:background="@drawable/model_button"
                    android:gravity="center"

                    android:text="Subscribe"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <Button
                    android:id="@+id/useraccountphoto_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:background="@drawable/model_button"
                    android:gravity="center"

                    android:text="Upload Image/Video"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/imagevideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>


            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/model_button"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>




    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</FrameLayout>